# codequery

./: .env.example  .gitignore  LICENSE  README  pyproject.toml  run_qdrant.sh
cq/: cli.py  config.py  embedding.py  search.py  shared.py
cq/commands/: chat_cmd.py  db_cmd.py  diff_cmd.py  dump_cmd.py  embed_cmd.py  search_cmd.py  stats_cmd.py  util.py
cq/providers/: __init__.py  base.py  local.py  openai.py
cq/tests/: test_providers.py
