[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codequery"
version = "0.3.0"
description = "code query"
dependencies = [
    "qdrant-client",
    "openai",
    "tiktoken",
    "python-dotenv",
    "pathspec"
]

[project.scripts]
cq = "cq.cli:main"

[tool.setuptools.packages.find]
include = ["cq"]
