[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codequery"
version = "0.4.0"
description = "code query"
dependencies = [
    "qdrant-client",
    "openai",
    "tiktoken",
    "python-dotenv",
    "pathspec",
    "anthropic"
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0,<3.0",
    "torch>=2.0.0"
]

[project.scripts]
cq = "cq.cli:main"

[tool.setuptools.packages.find]
include = ["cq"]
